PIRATE-4321 - Moved body overflow that fixes VH issue in iOS to tablet and below.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -55,9 +55,12 @@ html,
 body,
 .template-container {
     height: 100%;
-    overflow-y: scroll;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     -webkit-overflow-scrolling: touch;
+    
+    @media @tablet-860px {
+        overflow-y: scroll;
+    }
 }
 
 
